package fr.istic.taa.jaxrs.domain.enums;

public enum ModePaiement {
    CARTE_BANCAIRE,
    PAYPAL
}