package fr.istic.taa.jaxrs.domain.enums;

public enum TypeTicket {
    STANDARD,
    VIP
}